<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    tools:context="me.lancer.airfree.activity.RemoteActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="144dp"
            android:background="@color/blue_light"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_main_cloud_middle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/btn_mouse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_mouse_control" />

                        <TextView
                            android:id="@+id/tv_keyboard_mouse"
                            android:layout_width="fill_parent"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:paddingBottom="15dp"
                            android:paddingTop="5dp"
                            android:text="@string/keyboard_mouse_zn" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_gesture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_gesture_control" />

                        <TextView
                            android:id="@+id/tv_gesture"
                            android:layout_width="fill_parent"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:paddingBottom="15dp"
                            android:paddingTop="5dp"
                            android:text="@string/gesture_zn" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_voice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_voice_control" />

                        <TextView
                            android:id="@+id/tv_voice"
                            android:layout_width="fill_parent"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:paddingBottom="15dp"
                            android:paddingTop="5dp"
                            android:text="@string/voice_zn" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/btn_volume"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_volume_control" />

                        <TextView
                            android:id="@+id/tv_volume"
                            android:layout_width="fill_parent"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:paddingBottom="15dp"
                            android:paddingTop="5dp"
                            android:text="@string/volume_zn" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_power"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_power_control" />

                        <TextView
                            android:id="@+id/tv_power_option"
                            android:layout_width="fill_parent"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:paddingBottom="15dp"
                            android:paddingTop="5dp"
                            android:text="@string/power_option_zn" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_bright"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_bright_control" />

                        <TextView
                            android:id="@+id/tv_brightness"
                            android:layout_width="fill_parent"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:paddingBottom="15dp"
                            android:paddingTop="5dp"
                            android:text="@string/bright_zn" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/btn_open"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_screen_contorl" />

                        <TextView
                            android:id="@+id/tv_remote_device_info"
                            android:layout_width="fill_parent"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:paddingBottom="15dp"
                            android:paddingTop="5dp"
                            android:text="@string/info_zn" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_shot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_shot_control" />

                        <TextView
                            android:id="@+id/tv_desktop"
                            android:layout_width="fill_parent"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:paddingBottom="15dp"
                            android:paddingTop="5dp"
                            android:text="@string/desktop_zn" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_talk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_talk" />

                        <TextView
                            android:id="@+id/tv_chatroom"
                            android:layout_width="fill_parent"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:paddingBottom="15dp"
                            android:paddingTop="5dp"
                            android:text="@string/chatroom_zn" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
