<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_bg">

    <LinearLayout
        android:id="@+id/ll_titile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_dark"
        android:clipToPadding="true"
        android:elevation="3dp"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="32dp"
            android:layout_height="48dp"
            android:paddingTop="4dp"
            android:paddingLeft="8dp"
            android:gravity="center_vertical|left">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_chevron_left_white_24dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_show"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/document_zn"
            android:gravity="center"
            android:textColor="@color/base_color_text_white"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/ll_search"
            android:layout_width="32dp"
            android:layout_height="48dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:gravity="center_vertical|left">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_search_white_24dp" />
        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/lv_doc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_titile"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:divider="@color/base_bg"
        android:dividerHeight="2dp"
        android:scrollbars="none" />

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:layout_alignParentBottom="true"
        android:background="@color/blue_dark"
        android:elevation="3dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/btn_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_fm_ob_ic_del_n" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_zn"
                android:textColor="@color/base_color_text_white"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/btn_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_fm_ob_ic_copy_n" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/tv_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy_zn"
                android:textColor="@color/base_color_text_white"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/btn_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_fm_ob_ic_move_n" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/tv_cut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cut_zn"
                android:textColor="@color/base_color_text_white"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_fm_ob_ic_share_n" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/tv_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_zn"
                android:textColor="@color/base_color_text_white"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/btn_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_fm_ob_ic_all_n" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/tv_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_zn"
                android:textColor="@color/base_color_text_white"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>